MapCreator peut desormais creer, sauver et charger des maps sous le format .map

--- a/Mapping/Makefile
+++ b/Mapping/Makefile
@@ -1,8 +1,23 @@
-all: map
+CC=g++
+CFLAGS=-W -Wall -Wextra -g 
+EXEC= Rogue
+SFMLDIR=-I/usr/lib/x86_64-linux-gnu/ 
+IDIR=-I../includes
+LDIR= -lsfml-graphics -lsfml-window -lsfml-system -lm
+CDIR= ../
 
-map: map.o
-	g++ -g -o map map.o -lsfml-graphics -lsfml-window -lsfml-system -lm
-map.o: map.cpp
-	g++ -c map.cpp -I /usr/lib/x86_64-linux-gnu/
+
+all : MapCreator
+	#rm -f *.o
+
+MapCreator: MapCreator.cpp Map.o saveMap.o
+	g++ -o $@ $^ $(SFMLDIR) $(IDIR) $(LDIR) $(CFLAGS)
+
+Map.o: $(CDIR)Map.cpp
+	g++ -c $< -I$(SFMLDIR) $(IDIR) $(CFLAGS)
+
+saveMap.o: saveMap.cpp
+	g++ -c $< -I$(SFMLDIR) $(IDIR) $(CFLAGS)
+
 clean:
-	rm -f *.o
+	rm -f *.o MapCreator
