More comments added to class functions/Add physics with collector entity and character entity/Generalization of collector entity file loading to all types of entity

--- a/Mapping/Makefile
+++ b/Mapping/Makefile
@@ -10,7 +10,7 @@ OGAMEDIR= ../obj/
 SMAPDIR= src/
 OMAPDIR= obj/
 
-SOURCES_GAME:=$(filter-out $(SGAMEDIR)loadMap.cpp, $(wildcard $(SGAMEDIR)*.cpp))
+SOURCES_GAME:=$(filter-out $(SGAMEDIR)loadContent.cpp, $(wildcard $(SGAMEDIR)*.cpp))
 OBJECTS_GAME:=$(SOURCES_GAME:$(SGAMEDIR)%.cpp=$(OGAMEDIR)%.o)
 
 SOURCES_MAP:=$(wildcard $(SMAPDIR)*.cpp)
